Always switch to fullscreen mode on click on mobile devices. Avoid scrolling in mobile Chrome (due to address bar).

--- a/tdt-webapp/src/index.css
+++ b/tdt-webapp/src/index.css
@@ -2,8 +2,8 @@ html,
 body,
 #root {
   margin: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
